--- a/templates/base.html
+++ b/templates/base.html
@@ -496,7 +496,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('drone_status') }}">
+                        <a class="nav-link" href="{{ url_for('drone_status_page') }}">
                             <i class="fas fa-satellite-dish me-1"></i> Drone Status
                         </a>
                     </li>
@@ -540,4 +540,4 @@
         });
     </script>
 </body>
-</html> 
+</html>
